kubernetes/apps/media/qbittorrent/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/onedr0p/qbittorrent:5.0.4
          ports:
            - name: http
              containerPort: 8080
            - name: bittorrent
              containerPort: 50413
          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 4Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
            - name: shared-memory
              mountPath: /dev/shm
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: tmp
          emptyDir: {}
        - name: shared-memory
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
