kubernetes/apps/media/qbittorrent/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: qbittorrent.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - qbittorrent.unscfleet.com
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
